--- a/historyInputs.html
+++ b/historyInputs.html
@@ -49,7 +49,7 @@
 			console.log(document.cookie); 
 		}
 		
-		let cookieString = document.cookie.match(/=([a-zа-яА-ЯA-Z0-9\s]+)(?:\;|$)/g);
+		let cookieString = document.cookie.match(/\d=([a-zа-яА-ЯA-Z0-9\s]+)(?:\;|$)/g);
 		arrToV = [];
 		for (var i = 0; i < cookieString.length; i++) {
 				arrToV.push(cookieString[i].replace(/=([a-zа-яА-ЯA-Z0-9\s]+)(?:\;|$)/, '$1'));
@@ -63,7 +63,7 @@
 	console.log(document.cookie);
 	
 	window.onload = function(){
-		let cookieString = document.cookie.match(/=([a-zа-яА-ЯA-Z0-9\s]+)(?:\;|$)/g);
+		let cookieString = document.cookie.match(/\d=([a-zа-яА-ЯA-Z0-9\s]+)(?:\;|$)/g);
 		for (var i = 0; i < cookieString.length; i++) {
 				arrToV.push(cookieString[i].replace(/=([a-zа-яА-ЯA-Z0-9\s]+)(?:\;|$)/, '$1'));
 			}
